--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>Il portofilio di Davide Marzorati</h1>
     <h2>Scopri le mie capacità tecniche</h2>
 
-    <a href="./public/birthday-invite.html">il lavoro della pagina del mio compleanno</a> 
+  <h3> <a href="./public/birthday-invite.html">il lavoro della pagina del mio compleanno</a> </h3> 
    <a href="./public/birthday-invite.html"><img src="./assets/images/compleanno.png" alt="compleanno" height="200px"></a>
-</h3>
-<h3>  <a href="./public/movie-ranking.html">i film preferiti</a> 
+
+<h3>  <a href="./public/movie-ranking.html">i film preferiti</a> </h3>
    <a href="./public/movie-ranking.html"><img src="./assets/images/i-film.png" alt="film" height="200px"></a> 
-</h3>
+
    <hr />
     <a href="./public/contact.html">contattami</a>
     <a href="./public/about.html">contattami</a>
