--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,10 +10,10 @@
     <h2>Scopri le mie capacità tecniche</h2>
 
   <h3> <a href="./public/birthday-invite.html">il lavoro della pagina del mio compleanno</a> </h3> 
-   <a href="./public/birthday-invite.html"><img src="./assets/images/compleanno.png" alt="compleanno" height="200px"></a>
+   <a href="./public/birthday-invite.html"><img src="./assets/images/compleanno.png" alt="compleanno" height="200px"/></a>
 
 <h3>  <a href="./public/movie-ranking.html">i film preferiti</a> </h3>
-   <a href="./public/movie-ranking.html"><img src="./assets/images/i-film.png" alt="film" height="200px"></a> 
+   <a href="./public/movie-ranking.html"><img src="./assets/images/i-film.png" alt="film" height="200px"/></a> 
 
    <hr />
     <a href="./public/contact.html">contattami</a>
@@ -23,15 +22,3 @@
 </body>
 </html>
 
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
